--- a/L4_quyetde_project/public/question-detail.html
+++ b/L4_quyetde_project/public/question-detail.html
@@ -125,16 +125,15 @@
 
     <div class="main-content">
         <div class="question-content">
-            Something
         </div>
 
         <div class="vote">
-            <span class="vote-number">6</span> vote
+            <span class="vote-number"></span> vote
         </div>
 
         <div class="rate-bar">
-            <div class="dislike">40%</div>
-            <div class="like">60%</div>
+            <div class="dislike"></div>
+            <div class="like"></div>
         </div>
 
         <div class="btn">
